# StardrewAutoFishing

./: .gitignore  MainFrom.py  README.md  pyproject.toml  test_for.py
res/: fish.npy  fishing_UI.npy
src/autofishing/: Agent.py  Brain.py  Eye.py  Hand.c  Hand.py  Operator.py  common.py  utils.py
tests/: test_Agent.py  test_Eye.py  test_Hand.py  test_Operator.py
